--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -3,7 +3,8 @@
 
 :root {
     --bg-gray : #ddd ;
-    --color-primary: #4D41C0;
+    --text-gray : #4a4a4a
+    --color-primary: #4D41C0
     --white:#fff;
 }
 
@@ -57,5 +58,41 @@ a , a : hover {
  }
  .dsmovie-contact-container img {
      margin-right: 10px;
- }
+ } 
+#dsmovie-card-list{
+    padding :40px;
 }
+ .dsmovie-card {
+     width:360px;
+     height: 400px;
+     background-color: var(--white);
+ }
+
+ .dsmovie-card img {
+     width : 100%;
+     border-radius: 8px 8px 0 0;
+ }
+ .dsmovie-card-description {
+     padding: 10px 0 20 0;
+     display: flex ;
+     flex-direction: column;
+     align-items: center;
+     border-radius: 0 0 8px 8px;
+ }
+ .dsmovie-card-description h3 {
+     font-size: 14px;
+     font-weight: 700;
+     margin-bottom: 25px;
+ }
+ ..dsmovie-btn , .dsmovie-btn :hover {
+     width: 180px;
+     height: 40px;
+     background-color: var(--color-primary);
+     color: var(--white);
+     font-size: 14px;
+     font-weight: 700;
+     display :flex;
+     align-content: center;
+     justify-content: center;
+     border-radius: 4px;
+ }
